--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: "Rockwell Nova";
+  src: url("../assets/fonts/RockwellNova/rockwellnova-webfont.woff2")
+      format("woff2"),
+    url("../assets/fonts/RockwellNova/rockwellnova-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Rockwell Nova";
+  src: url("../assets/fonts/RockwellNova/rockwellnova-bold-webfont.woff2") format("woff2"),
+    url("../assets/fonts/RockwellNova/rockwellnova-bold-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
 html {
   font-size: 9px;
   -webkit-tap-highlight-color: transparent;
@@ -27,9 +44,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Quattrocento", Georgia, serif;
+  font-family: "Rockwell Nova", Georgia, serif;
   font-weight: 400;
-  text-transform: uppercase;
 }
 
 h1,
@@ -39,7 +55,6 @@ h4,
 h5,
 h6 {
   margin: 0;
-  letter-spacing: 0.18em;
   line-height: 1.5;
 
   &:not(:first-child) {
