--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,9 @@
 $mobile-break: 700px;
 
+// @import "~tailwindcss/base";
+// @import "~tailwindcss/components";
+// @import "~tailwindcss/utilities";
+
 @import "typography";
 @import "layout";
 @import "forms";
