configure PostCSS to accept Tailwind
Tailwind is currently disabled; only going to use if needed

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,9 @@
 $mobile-break: 700px;
 
-// @import "~tailwindcss/base";
-// @import "~tailwindcss/components";
-// @import "~tailwindcss/utilities";
+// uncomment to start using Tailwind //
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 @import "typography";
 @import "layout";
