--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -9,8 +9,10 @@
 
 @font-face {
   font-family: "Rockwell Nova";
-  src: url("../assets/fonts/RockwellNova/rockwellnova-bold-webfont.woff2") format("woff2"),
-    url("../assets/fonts/RockwellNova/rockwellnova-bold-webfont.woff") format("woff");
+  src: url("../assets/fonts/RockwellNova/rockwellnova-bold-webfont.woff2")
+      format("woff2"),
+    url("../assets/fonts/RockwellNova/rockwellnova-bold-webfont.woff")
+      format("woff");
   font-weight: bold;
   font-style: normal;
 }
