--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -16,7 +16,24 @@ body {
   border-radius: 2px;
 }
 
+.organization-group > * {
+  margin: 0 !important;
+}
+
+.organization-name {
+  color: #05566b;
+  font-weight: bold;
+}
+.organization-subheading {
+  color: #068294;
+}
+
 header {
+  ::selection {
+    background: aliceblue;
+  }
+
+  background: #cbe5e9;
   box-sizing: border-box;
 
   .container {
@@ -28,12 +45,20 @@ header {
     background-position: calc(50% - 300px) calc(100% + 20px);
 
     &.main-hero {
-      height: 80vh;
-      background-position: calc(50% - 350px) calc(100% + 20px);
+      // height: 80vh;
+      // background-position: calc(50% - 350px) calc(100% + 20px);
+      .organization-name {
+        color: #05566b;
+        font-weight: bold;
+      }
+      .organization-subheading {
+        margin-top: 0;
+        color: #068294;
+      }
     }
 
     .container {
-      text-align: right;
+      text-align: left;
     }
   }
 
