--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -1,3 +1,5 @@
+@import "_colors";
+
 body {
   margin: 0;
   padding: 0;
@@ -11,9 +13,9 @@ body {
 
 .box {
   background-color: #fefefe;
-  box-shadow: 1px 1px 5px 0 rgba(100, 100, 100, 0.2);
+  border: 1px solid $color-ea-dark;
+  border-radius: 4px;
   padding: 20px;
-  border-radius: 2px;
 }
 
 .organization-group > * {
@@ -21,11 +23,11 @@ body {
 }
 
 .organization-name {
-  color: #05566b;
   font-weight: bold;
+  color: $color-ea-dark;
 }
 .organization-subheading {
-  color: #068294;
+  color: $color-ea-primary;
 }
 
 header {
@@ -48,12 +50,12 @@ header {
       // height: 80vh;
       // background-position: calc(50% - 350px) calc(100% + 20px);
       .organization-name {
-        color: #05566b;
+        color: $color-ea-dark;
         font-weight: bold;
       }
       .organization-subheading {
         margin-top: 0;
-        color: #068294;
+        color:#0c869b;
       }
     }
 
@@ -117,13 +119,11 @@ section {
 
 .light-section {
   background-color: #f5f5f7;
-  box-shadow: inset 0px 15px 15px -15px rgba(100, 100, 100, 0.2);
 }
 
 .dark-section {
   background-color: #3e3f46;
   color: #c1c1c1;
-  box-shadow: inset 0px 15px 15px -15px rgba(0, 0, 0, 0.5);
 
   a {
     color: #efefef;
@@ -296,20 +296,11 @@ footer {
 }
 
 .testimonial-message::before {
-  top: 100%;
-  left: 25px;
+  top: 100.5%;
   width: 18px;
   height: 18px;
-  box-shadow: 1px 1px 5px 0 rgba(100, 100, 100, 0.2);
-}
-
-.testimonial-message::after {
-  top: 100%;
-  left: 22px;
-  height: 24px;
-  width: 24px;
-  z-index: 1;
-  margin-top: -5px;
+  border-right: 1px solid $color-ea-dark;
+  border-bottom: 1px solid $color-ea-dark;
 }
 
 .columns {
