--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #fefefe;
+  background-color: $white;
 }
 
 .container {
@@ -12,10 +12,21 @@ body {
 }
 
 .box {
-  background-color: #fefefe;
+  background-color: $white;
   border: 1px solid $color-ea-dark;
   border-radius: 4px;
   padding: 20px;
+}
+
+header .logo {
+  height: 25rem;
+}
+
+header .organization-group {
+  display: flex;
+  align-items: center;
+  column-gap: 3rem;
+  cursor: pointer;
 }
 
 .organization-group > * {
@@ -27,6 +38,7 @@ body {
   color: $color-ea-dark;
 }
 .organization-subheading {
+  margin-top: 0;
   color: $color-ea-primary;
 }
 
@@ -43,9 +55,6 @@ header {
   }
 
   @media (min-width: $mobile-break) {
-    background-size: contain;
-    background-position: calc(50% - 300px) calc(100% + 20px);
-
     &.main-hero {
       // height: 80vh;
       // background-position: calc(50% - 350px) calc(100% + 20px);
@@ -55,7 +64,7 @@ header {
       }
       .organization-subheading {
         margin-top: 0;
-        color:#0c869b;
+        color: $color-ea-primary;
       }
     }
 
@@ -65,6 +74,9 @@ header {
   }
 
   nav {
+    margin-top: 2rem;
+    font-size: 2.25rem;
+    text-align: center;
     max-width: 100%;
 
     ul {
