--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -55,7 +55,7 @@ header {
   }
 
   @media (min-width: $mobile-break) {
-    &.main-hero {
+    &.large-header {
       // height: 80vh;
       // background-position: calc(50% - 350px) calc(100% + 20px);
       .organization-name {
