update contact form style and placeholder

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,4 +2,5 @@ $color-ea-primary: #0c869b;
 $color-ea-dark: #054d5a;
 $color-ea-light: #35bbd2;
 $color-ea-beige: #f4efe9;
+$gray: #ccc;
 $white: #fff;
