--- a/styles/_forms.scss
+++ b/styles/_forms.scss
@@ -1,5 +1,13 @@
 @import "colors";
 
+::placeholder {
+  color: $gray;
+}
+
+::-ms-input-placeholder {
+  color: $gray;
+}
+
 label {
   display: block;
   font-size: 1.5rem;
@@ -9,7 +17,7 @@ input,
 textarea {
   padding: 10px;
   margin: 10px 0;
-  border: 1px solid $color-ea-dark;
+  border: 1px solid $gray;
   border-radius: 4px;
   width: 100%;
   max-width: 500px;
