--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -19,7 +19,8 @@ body {
 }
 
 header .logo {
-  height: 25rem;
+  //height: 25rem;
+  height: clamp(15rem, 5.2235rem + 13.9665vw, 25rem);
 }
 
 header .organization-group {
