add unofficial EA colors

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,5 +2,13 @@ $color-ea-primary: #0c869b;
 $color-ea-dark: #054d5a;
 $color-ea-light: #35bbd2;
 $color-ea-beige: #f4efe9;
+
+$color-ea-muted-blue: #598F98;
+$color-ea-muted-green: #8FCA9E;
+$color-ea-muted-yellow: #F9E8A0;
+$color-ea-muted-red: #F9A8A8;
+$color-ea-muted-purple: #995B7B;
+
+$light-blue: #cbe5e9;
 $gray: #ccc;
 $white: #fff;
