--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -3,11 +3,11 @@ $color-ea-dark: #054d5a;
 $color-ea-light: #35bbd2;
 $color-ea-beige: #f4efe9;
 
-$color-ea-muted-blue: #598F98;
-$color-ea-muted-green: #8FCA9E;
-$color-ea-muted-yellow: #F9E8A0;
-$color-ea-muted-red: #F9A8A8;
-$color-ea-muted-purple: #995B7B;
+$color-ea-muted-blue: #598f98;
+$color-ea-muted-green: #8fca9e;
+$color-ea-muted-yellow: #f9e8a0;
+$color-ea-muted-red: #f9a8a8;
+$color-ea-muted-purple: #995b7b;
 
 $light-blue: #cbe5e9;
 $gray: #ccc;
