--- a/styles/_calendar.scss
+++ b/styles/_calendar.scss
@@ -6,6 +6,15 @@
   gap: 1rem;
 }
 
+.event-link {
+  display: inline-grid;
+  color: $color-ea-dark;
+
+  &:hover {
+    color: $color-ea-dark;
+  }
+}
+
 .event {
   @extend .box;
   padding: 0;
@@ -48,6 +57,63 @@
   font-size: 0.75em;
   color: $white;
   padding: 8px 16px;
+}
+
+.event-tooltip {
+  color: $color-ea-dark !important;
+  line-height: initial !important;
+  padding: 8px !important;
+  border-radius: 4px !important;
+  border: 1px solid $color-ea-dark !important;
+  background-color: $color-ea-beige !important;
+
+  &.place-right {
+    &:before {
+      border-right: 8px solid $color-ea-dark !important;
+    }
+
+    &:after {
+      border-right-color: $color-ea-beige !important;
+    }
+  }
+
+  &.place-left {
+    &:before {
+      border-left: 8px solid $color-ea-dark !important;
+    }
+
+    &:after {
+      border-left-color: $color-ea-beige !important;
+    }
+  }
+
+  &.place-top {
+    &:before {
+      border-top: 8px solid $color-ea-dark !important;
+    }
+
+    &:after {
+      border-top-color: $color-ea-beige !important;
+    }
+  }
+
+  &.place-bottom {
+    &:before {
+      border-bottom: 8px solid $color-ea-dark !important;
+    }
+
+    &:after {
+      border-bottom-color: $color-ea-beige !important;
+    }
+  }
+}
+
+.event-tooltip-child svg {
+  fill: $color-ea-dark;
+  margin-left: 0.5rem;
+  vertical-align: middle;
+  width: 1em;
+  height: 1em;
 }
 
 .calendar-error {
