add support for calendar images and all-day events

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -20,7 +20,7 @@
 }
 
 $font-sans: "Cabin", "Aller", "Merriweather", "Ubuntu", sans-serif;
-$font-slab: "Rockwell Nova", "Roboto Slab" "Merriweather", Georgia, serif;
+$font-slab: "Rockwell Nova", "Roboto Slab", "Merriweather", Georgia, serif;
 
 html {
   font-size: 9px;
